# subtitles

./: LICENSE  subtitles.cabal
src/: Subtitles.hs
